# jm-sp-bot

./: .env.example  .env.production.example  .gitignore  Claude.md  DESIGN.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.claude/: launch.json
data/: 库存导入模板.xlsx
docs/: 20260609105729-积木易搭丨毛凯预定的会议-逐字稿文本-1.docx  agent-skill-architecture-design.md  automation-pipeline-design.md  cfo-analysis.md  code_completion_analysis.md  coding-plan.md  comprehensive-analysis-v2.md  crm-sales-order-data-integration-feasibility.md  database-workflow-design.md  entity-inventory-analysis.md  inter-entity-transfer-design.md  inventory-entity-pre-review-design.md  mermaid-chart.html  multi-entity-analysis.md  mvp-task-list.md  overseas-excel-attachment-design.md  production-order-agent-prd-review-v0.2.md  production-order-agent-prd.md  research-deep-analysis.md  self-review-v0.2.md  technical-solution.md  ui-design.md  v2-architecture-and-agent-spec.md  v2-code-completion-review-v2.md  v2-code-completion-review.md  v2-ecommerce-and-print-detailed-design.md  v2-order-middle-platform-design.md  workflow-flowchart.md  产品对象新建导入模板（07.07）.xlsx  产品销售库模板v1.0.xlsx  商务AI_Agent_系统开发需求规格说明书_v0.1.docx  商务AI_Agent_系统开发需求规格说明书_v0.2.docx  商务智能体调研_原文.docx  商务生产任务单智能体_PRD_评审版_v0.2.docx  商务生产任务单智能体_用户手册.docx  商务生产任务单智能体_用户手册.md  商务生产任务单智能体软件测试报告20260423.docx  商务部小J智能体上线试用通知及使用说明.docx  商务部小J智能体（内测版）上线试用通知及使用说明.docx  商务部小J真实环境全流程联调测试报告.docx  (+11 more)
scripts/: cdp_dom_probe.mjs  fix_omp_duplicates.py  fxiaoke_cdp_probe.mjs  (+20 more)
(+133 files in other folders)
